support series tags in player stats
* support for series tags

* supporting series tags in stats

* support for get series and delete series